# BeePy

./: .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  404.html  LICENSE  Procfile  README.md  app.json  beepy.css  beepy.js  dev-requirements.txt  index.html  js.py  js.pyi  mkdocs.yml  netlify.toml  pyproject.toml  pyweb.css  pyweb.js  pyweb.py  requirements.txt  sitemap.xml  test_2.py  vercel.json
.github/workflows/: ci.yml
backend/: README.md  db.sqlite3  manage.py  requirements.txt
backend/beepy_webapp/: asgi.py  settings.py  urls.py  wsgi.py
backend/static/templates/: __init__.py  admin.py  buttons.py  context_menu.py  dynamic_url.py  focus.py  highlight.py  index.html  modal.py  plot.py  tabs.py  text_sync.py  timer.py  todos.py
backend/static/templates/custom_url/: __init__.py  index.html
backend/static/templates/latex/: __init__.py  main.css
backend/static/templates/multiple_apps/: __init__.py  index.html
backend/static/templates/styles/: admin.css  main.css  plot.css  todos.css
backend/static/templates/test_admin/: __init__.py  index.html
backend/staticfiles/: .info
backend/test_task_django_pyweb/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/webapp/: apps.py  urls.py  utils.py  views.py
backend/webapp/management/commands/: build.py
beepy/: __init__.py  __main__.py  attrs.py  children.py  components.py  context.py  context_menu.py  dev.py  framework.py  import_hooks.py  listeners.py  local_storage.py  modal.py  router.py  style.py  table.py  tabs.py  tags.py  trackable.py  types.py  utils.py
beepy/dev/: .env.example  __init__.py  __main__.py  example.html  example.py
beepy/modules/: actions.py  context_menu.py  local_storage.py  modal.py  plot.py  table.py  tabs.py
beepy/ssr/: __init__.py  extra.js
beepy/utils/: __init__.py  api.py  asyncio.py  common.py  dev.py  import_hooks.py  internal.py  js.py  js_py.py
demo/: counter.py  synced_counters.py
docs/: conf.py  index.md  live-examples.md  local-development-guide.md  requirements.txt
docs/demo/: getting-started.py  synced-counters.py
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: 1.py  __init__.py  buttons.py  context-menu.html  context_menu.py  count_down_timer.py  dynamic_url.py  index.html  modal.py  sandbox.py  tabs.html  tabs.py  text_sync.py  timer.css  timer.py  todos.html  todos.py
examples/context-menu/: __init__.py  index.html
examples/dynamic-url/: __init__.py  index.html
examples/modal/: __init__.py  index.html
examples/sandbox/: index.html
examples/tabs/: __init__.py  index.html
examples/tg_web_app/: __init__.py  index.html
examples/todos/: __init__.py  index.html
live-examples/: index.html
local-development-guide/: index.html
pyweb/: __init__.py  actions.py  attrs.py  children.py  context.py  context_menu.py  debugger.js  framework.py  import_hooks.py  js.pyi  listeners.py  local_storage.py  modal.py  plot.py  pyweb.js  router.py  style.py  table.py  tabs.py  tags.py  trackable.py  types.py  utils.js  utils.py
scripts/: build.sh  publish.sh
search/: search_index.json
web/: README.md  package-lock.json  package.json  webpack.dev.js  webpack.prod.js
web/src/: beepy.js  dev-server.js  files.js  index.js  main.css  python.js  utils.js
